<resources>
    <string name="app_name">FinalProject</string>
    <string name="additional_data">Additional Data</string>
    <string name="address">Street Address</string>
    <string name="address_component_type_country">country</string>
    <string name="address_component_type_locality">locality</string>
    <string name="address_component_type_route">route</string>
    <string name="address_component_type_state">administrative_area_level_1</string>
    <string name="address_component_type_street_number">street_number</string>
    <string name="address_component_type_sublocality">sublocality</string>
    <string name="address_component_type_zip">postal_code</string>
    <string name="address_duplicate">Address already saved</string>
    <string name="address_saved">Address saved</string>
    <string name="address_removed">Addressed removed</string>
    <string name="alert_title_eula">WARNING</string>
    <string name="alert_title_geocoding">Unable to access geocoding service.</string>
    <string name="alert_title_gps">Unable to access GPS</string>
    <string name="alert_title_invalid_address">Invalid address</string>
    <string name="alert_title_no_street_address">No street address found</string>
    <string name="alert_message_eula">If you do not accept the End-User Licence Agreement you will not be
        able to use this application. Press \"Return to Agreement\" to return, press \"Confirm\" to
        exit the application.</string>
    <string name="alert_message_geocoding">Unable to access geolocation service. Please ensure you have
        a stable internet connection and try again later. If you continue to experience issues, it may be
        that the geolocation service is unavailable at this time.</string>
    <string name="alert_message_gps">Unable to access GPS location. Please ensure GPS is enabled and
        that you approve permissions for this application to use GP, otherwise use the manual
        search.</string>
    <string name="alert_message_gps_still_locating">GPS was unable to be obtained. Please wait for use manual search.</string>
    <string name="alert_message_invalid_address">No results returned for entered address.</string>
    <string name="alert_message_no_street_address">No street address found</string>
    <string name="google_api_base_url">https://maps.googleapis.com/maps/api/</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_search_address"><u>Search</u></string>
    <string name="btn_reject">Reject</string>
    <string name="btn_save">Save</string>
    <string name="btn_view">View</string>
    <string name="confirm">Confirm</string>
    <string name="city">City</string>
    <string name="elevation">Elevation: </string>
    <string name="elevation_suffix"> meters</string>
    <string name="eula_acceptance">eula_acceptance</string>
    <string name="favorites_activity">favorite_activity</string>
    <string name="key_address">address</string>
    <string name="key_api_key">key</string>
    <string name="key_coordinates">latlng</string>
    <string name="key_elevation">elevation</string>
    <string name="key_elevation_locations">locations</string>
    <string name="key_geocode_result_city">geocode_result_city</string>
    <string name="key_geocode_result_country">geocode_result_country</string>
    <string name="key_geocode_result_state">geocode_result_state</string>
    <string name="key_geocode_result_street_address">geocode_result_street_number</string>
    <string name="key_geocode_result_zip">geocode_result_zip</string>
    <string name="key_image_url">image_url</string>
    <string name="key_result_type">location_type</string>
    <string name="key_source_activity">source_activity</string>
    <string name="loading">Loading</string>
    <string name="missing_city">City is required</string>
    <string name="missing_street">Street address is required</string>
    <string name="missing_state">Select a state</string>
    <string name="missing_zip">Zip code is required</string>
    <string name="no_saved_addresses">No saved address</string>
    <string name="no_data_available">No data available</string>
    <string name="ok">OK</string>
    <string name="preferences_file">userSettings</string>
    <string name="return_to_application">Return to application</string>
    <string name="saved_addresses">Saved Address</string>
    <string name="search_activity">search_activity</string>
    <string name="search_address">Search Address Manually</string>
    <string name="search__current_address">Search Current Address</string>
    <string name="street_address_type">street_address</string>
    <string name="streetview_key">key=</string>
    <string name="streetview_location">location=</string>
    <string name="streetview_query">streetview?</string>
    <string name="streetview_size">size=300x300</string>
    <string name="title">Home Evaluator</string>
    <string name="title_activity_maps">Map</string>
    <string name="toast_text_gps_found">GPS location found</string>
    <string name="view_saved_addresses">View saved addresses</string>
    <string name="zero_results">ZERO_RESULTS</string>
    <string name="zip">Zip Code</string>
    <string-array name="states_array">
        <item>Select State</item>
        <item>AL</item>
        <item>AS</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>