<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualSearchActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgAppIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtSteetAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/address"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtSearchAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtSearchAddress" />

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/statesArray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtCity" />

    <Button
        android:id="@+id/btnAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_add_address"
        app:layout_constraintStart_toStartOf="@+id/editTxtSteetAddress"
        app:layout_constraintTop_toBottomOf="@+id/stateSpinner" />

    <EditText
        android:id="@+id/editTxtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/city"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtSteetAddress" />

    <EditText
        android:id="@+id/editTxtZip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/zip"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/editTxtSteetAddress"
        app:layout_constraintStart_toEndOf="@+id/editTxtCity"
        app:layout_constraintTop_toTopOf="@+id/editTxtCity" />

    <ImageView
        android:id="@+id/imgAppIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/editTxtSteetAddress"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        app:srcCompat="@drawable/app_icon" />

    <TextView
        android:id="@+id/txtSearchAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_address"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>