<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedAddressesActivity">

    <TextView
        android:id="@+id/txtSaveAddresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/saved_addresses"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle_SavedFavorites" />

    <TextView
        android:id="@+id/txtTitle_SavedFavorites"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgAppIcon_SavedAddresses"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAppIcon_SavedAddresses"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle_SavedFavorites"
        app:srcCompat="@drawable/app_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSavedAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaveAddresses"
        tools:listitem="@layout/saved_address" />

    <TextView
        android:id="@+id/txtNoSavedAddresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_saved_addresses"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/txtSaveAddresses"
        app:layout_constraintTop_toBottomOf="@+id/txtSaveAddresses" />

</androidx.constraintlayout.widget.ConstraintLayout>